--- a/schunk_lwa4p_control/config/hardware_controllers.yaml
+++ b/schunk_lwa4p_control/config/hardware_controllers.yaml
@@ -53,3 +53,10 @@ velocity_trajectory_controller:
     state_publish_rate: 50 # Defaults to 50
     action_monitor_rate: 20 # Defaults to 20
     #hold_trajectory_duration: 0 # Defaults to 0.5
+
+# Gripper Controller -----------------------------------------------------------
+gripper_controller:
+    type: "position_controllers/GripperActionController"
+    joint: gripper_base_joint_gripper_left
+
+
