--- a/tug_grasp_object/CMakeLists.txt
+++ b/tug_grasp_object/CMakeLists.txt
@@ -101,7 +101,7 @@ catkin_package(
 
 ## Specify additional locations of header files
 ## Your package locations should be listed before other locations
-# include_directories(include)
+include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
@@ -112,7 +112,7 @@ include_directories(
 # )
 
 ## Declare a cpp executable
-# add_executable(tug_grasp_object_node src/tug_grasp_object_node.cpp)
+add_executable(grasp_object_node src/grasp_object_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
