--- a/tug_grasp_object_msgs/package.xml
+++ b/tug_grasp_object_msgs/package.xml
@@ -41,10 +41,13 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>geometry_msgs</run_depend>
     <run_depend>actionlib</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
   <run_depend>message_generation</run_depend>
 
 
