--- a/schunk_lwa4p_moveit_config/config/controllers.yaml
+++ b/schunk_lwa4p_moveit_config/config/controllers.yaml
@@ -1,5 +1,5 @@
 controller_list:
- - name: velocity_trajectory_controller
+ - name: arm_controller
    action_ns: follow_joint_trajectory
    type: FollowJointTrajectory
    default: true
