--- a/cartesian_controller/package.xml
+++ b/cartesian_controller/package.xml
@@ -20,6 +20,7 @@
   <build_depend>hardware_interface</build_depend>
   <build_depend>realtime_tools</build_depend>
   <build_depend>kdl_parser</build_depend>
+  <build_depend>joint_trajectory_controller</build_depend>
   
   <run_depend>roscpp</run_depend>
   <run_depend>eigen</run_depend>
@@ -29,6 +30,7 @@
   <run_depend>hardware_interface</run_depend>
   <run_depend>realtime_tools</run_depend>
   <run_depend>kdl_parser</run_depend>
+  <run_depend>joint_trajectory_controller</run_depend>
 
 
   <export>
