--- a/push_door_handle/package.xml
+++ b/push_door_handle/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>tug_push_door_handle</name>
+  <name>push_door_handle</name>
   <version>0.0.0</version>
-  <description>The tug_push_door_handle package</description>
+  <description>The push_door_handle package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/tug_push_doorhandle</url> -->
+  <!-- <url type="website">http://wiki.ros.org/push_door_handle</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -40,30 +40,20 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
-  
-  <build_depend>baxter_control</build_depend>
-  <build_depend>baxter_core_msgs</build_depend>
+  <build_depend>roscpp</build_depend>
+  <run_depend>roscpp</run_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
+  <build_depend>actionlib</build_depend>
+
   <build_depend>moveit_core</build_depend>
   <build_depend>moveit_ros_planning</build_depend>
   <build_depend>moveit_ros_planning_interface</build_depend>
-  <build_depend>moveit_visual_tools</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>moveit_simple_grasps</build_depend>
-  <build_depend>tug_grasp_object_msgs</build_depend>
-  <build_depend>eigen_conversions</build_depend>
-  <build_depend>actionlib</build_depend>
-
-  <run_depend>baxter_control</run_depend>
-  <run_depend>baxter_core_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>moveit_core</run_depend>
   <run_depend>moveit_ros_planning</run_depend>
   <run_depend>moveit_ros_planning_interface</run_depend>
-  <run_depend>moveit_visual_tools</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>moveit_simple_grasps</run_depend>
-  <run_depend>tug_grasp_object_msgs</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
   <run_depend>actionlib</run_depend>
 
 
