--- a/schunk_lwa4p_moveit/config/controllers.yaml
+++ b/schunk_lwa4p_moveit/config/controllers.yaml
@@ -1,5 +1,5 @@
 controller_list:
- - name: velocity_trajectory_controller
+ - name: arm_controller
    action_ns: follow_joint_trajectory
    type: FollowJointTrajectory
    default: true
@@ -10,3 +10,9 @@ controller_list:
       - arm_4_joint
       - arm_5_joint
       - arm_6_joint
+ - name: gripper_controller
+   action_ns: gripper_cmd
+   type: GripperCommand
+   default: true
+   joints:
+     - gripper_base_joint_gripper_left
