--- a/schunk_teleop/config/controller_default.yaml
+++ b/schunk_teleop/config/controller_default.yaml
@@ -1,11 +1,13 @@
 controller: Default
-button_move_deadman_switch: 6
-button_rotate_deadman_switch: 4
+button_translation_deadman_switch: 6
+button_rotation_deadman_switch: 4
 button_turbo: 7
-axis_move_x: 1
-axis_move_y: 0
-axis_move_z: 2
-axis_rotate_x: 3
-axis_rotate_y: 1
-axis_rotate_z: 0
+button_gripper_grasp: 0
+button_gripper_release: 1
+axis_translation_x: 1
+axis_translation_y: 0
+axis_translation_z: 2
+axis_rotation_x: 3
+axis_rotation_y: 1
+axis_rotation_z: 0
 
