--- a/schunk_teleop/package.xml
+++ b/schunk_teleop/package.xml
@@ -10,15 +10,23 @@
   <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
 
   <buildtool_depend>catkin</buildtool_depend>
+  
   <build_depend>geometry_msgs</build_depend>
   <!-- <build_depend>joy</build_depend> -->
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>control_msgs</build_depend>
+
   <run_depend>geometry_msgs</run_depend>
   <run_depend>joy</run_depend>
+  <run_depend>actionlib</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>sensor_msgs</run_depend>
-
+  <run_depend>control_msgs</run_depend>
+  
   <export>
   </export>
 </package>
