--- a/schunk_lwa4p_control/CMakeLists.txt
+++ b/schunk_lwa4p_control/CMakeLists.txt
@@ -9,6 +9,7 @@ find_package(catkin REQUIRED COMPONENTS
   controller_manager
   roscpp
   urdf
+  joint_limits_interface
 )
 
 ## System dependencies are found with CMake's conventions
