--- a/box_detection/package.xml
+++ b/box_detection/package.xml
@@ -49,13 +49,15 @@
   
   <build_depend>sensor_msgs</build_depend>
   <build_depend>moveit_msgs</build_depend>
-  <build_depend>message_generation</build_depend>
+  <build_depend>actionlib</build_depend>
+  <build_depend>actionlib_msgs</build_depend>
 
   <run_depend>roscpp</run_depend>
-  <run_depend>message_runtime</run_depend>
   <run_depend>libpcl-all</run_depend>
   <run_depend>pcl_conversions</run_depend>
   <run_depend>pcl_ros</run_depend>
+  <run_depend>actionlib</run_depend>
+  <run_depend>actionlib_msgs</run_depend>
 
   <run_depend>sensor_msgs</run_depend>
   <run_depend>moveit_msgs</run_depend>
