--- a/tug_open_door/CMakeLists.txt
+++ b/tug_open_door/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(tug_push_door_handle)
+project(tug_open_door)
 
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
+find_package(catkin REQUIRED
   baxter_control
   baxter_core_msgs
   geometry_msgs
@@ -16,10 +16,10 @@ find_package(catkin REQUIRED COMPONENTS
   moveit_simple_grasps
   tug_grasp_object_msgs
   eigen_conversions
-  actionlib
 )
 
 ## System dependencies are found with CMake's conventions
+# find_package(Boost REQUIRED COMPONENTS system)
 find_package(Eigen REQUIRED)
 find_package(Boost REQUIRED thread system)
 
@@ -76,7 +76,7 @@ find_package(Boost REQUIRED thread system)
 ## Generate added messages and services with any dependencies listed here
 # generate_messages(
 #   DEPENDENCIES
-#   baxter_core_msgs#   geometry_msgs
+#   std_msgs  # Or other packages containing msgs
 # )
 
 ###################################
@@ -90,8 +90,8 @@ find_package(Boost REQUIRED thread system)
 ## DEPENDS: system dependencies of this project that dependent projects also need
 catkin_package(
 #  INCLUDE_DIRS include
-#  LIBRARIES tug_push_doorhandle
-#  CATKIN_DEPENDS action_lib baxter_control baxter_core_msgs geometry_msgs moveit moveit_core moveit_ros_planning moveit_ros_planning_interface moveit_visual_tools roscpp simple_grasps
+#  LIBRARIES tug_open_door
+#  CATKIN_DEPENDS other_catkin_pkg
 #  DEPENDS system_lib
 )
 
@@ -105,26 +105,24 @@ include_directories(include)
 include_directories(
   ${catkin_INCLUDE_DIRS}
 )
-
+link_directories(${catkin_LIBRARY_DIRS})
 ## Declare a cpp library
-add_library(push_door_handle
-  include/${PROJECT_NAME}/push_door_handle/push_door_handle.h
-  include/${PROJECT_NAME}/push_door_handle_node.h
-  src/push_door_handle/push_door_handle.cpp
- )
-
+ add_library(open_door
+   include/${PROJECT_NAME}/open_door_node.h
+   include/${PROJECT_NAME}/open_door/open_door.h
+   src/open_door/open_door.cpp
+)
+target_link_libraries(open_door ${catkin_LIBRARIES})
 ## Declare a cpp executable
-add_executable(push_door_handle_node src/push_door_handle_node.cpp)
+add_executable(open_door_node src/open_door_node.cpp)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
-# add_dependencies(tug_push_doorhandle_node tug_push_doorhandle_generate_messages_cpp)
-target_link_libraries(push_door_handle ${catkin_LIBRARIES})
+add_dependencies(open_door_node tug_grasp_object_msgs_generate_messages_cpp)
+
 ## Specify libraries to link a library or executable target against
-target_link_libraries(push_door_handle_node
-    push_door_handle
-   ${catkin_LIBRARIES}
-   ${Boost_LIBRARIES}
+target_link_libraries(open_door_node
+  open_door
  )
 
 #############
@@ -142,7 +140,7 @@ target_link_libraries(push_door_handle_node
 # )
 
 ## Mark executables and/or libraries for installation
-# install(TARGETS tug_push_doorhandle tug_push_doorhandle_node
+# install(TARGETS tug_open_door tug_open_door_node
 #   ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
 #   RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
@@ -167,7 +165,7 @@ target_link_libraries(push_door_handle_node
 #############
 
 ## Add gtest based cpp test target and link libraries
-# catkin_add_gtest(${PROJECT_NAME}-test test/test_tug_push_doorhandle.cpp)
+# catkin_add_gtest(${PROJECT_NAME}-test test/test_tug_open_door.cpp)
 # if(TARGET ${PROJECT_NAME}-test)
 #   target_link_libraries(${PROJECT_NAME}-test ${PROJECT_NAME})
 # endif()
