--- a/box_detection_and_shoring/package.xml
+++ b/box_detection_and_shoring/package.xml
@@ -40,12 +40,29 @@
   <!-- Use test_depend for packages you need only for testing: -->
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+
   <build_depend>actionlib</build_depend>
   <build_depend>box_detection</build_depend>
   <build_depend>roscpp</build_depend>
+  <build_depend>shoring_msgs</build_depend>
+  <build_depend>tf</build_depend>
+  <build_depend>moveit_core</build_depend>
+  <build_depend>moveit_ros_planning</build_depend>
+  <build_depend>moveit_ros_planning_interface</build_depend>
+  <build_depend>controller_manager_msgs</build_depend>
+  <build_depend>std_msgs</build_depend>
+
+
   <run_depend>actionlib</run_depend>
   <run_depend>box_detection</run_depend>
+  <run_depend>shoring_msgs</run_depend>
   <run_depend>roscpp</run_depend>
+  <run_depend>tf</run_depend>
+  <run_depend>moveit_core</run_depend>
+  <run_depend>moveit_ros_planning</run_depend>
+  <run_depend>moveit_ros_planning_interface</run_depend>
+  <run_depend>controller_manager_msgs</run_depend>
+  <run_depend>std_msgs</run_depend>
 
 
   <!-- The export tag contains other, unspecified, tags -->
